# maya-gaussian-splatting-viewport-plugin

./: .gitignore  CMakeLists.txt  README.md  maya_gaussian_splat_blueprint.md  vcpkg.json
scripts/: create_gaussian_splat.py
src/: GaussianDrawOverride.cpp  GaussianDrawOverride.h  GaussianNode.cpp  GaussianNode.h  GaussianRenderer.cpp  GaussianRenderer.h  PlyLoader.cpp  PlyLoader.h  plugin.cpp
src/shaders/: depth.comp  gaussian.frag  gaussian.vert  sort.comp
